// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanetCard should match a snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PlanetCard
    card={
        Object {
            "climate": "arrid",
            "name": "tatooine",
            "population": "1000",
            "residents": Array [
              "Tom",
              "Dick",
              "Harry",
            ],
            "terrain": "mountains",
          }
    }
    favorites={Array []}
    handleFavoriteClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <div
                className="info-card__top-line"
        >
                <h3>
                        tatooine
                </h3>
                <button
                        className=""
                        onClick={[Function]}
                />
        </div>
        <p>
                Population: 
                1,000
        </p>
        <p>
                Terrain: 
                mountains
        </p>
        <p>
                Climate: 
                arrid
        </p>
        <p>
                Residents: 
                Tom, Dick, Harry
        </p>
</div>,
      "className": "info-card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="info-card__top-line"
>
            <h3>
                        tatooine
            </h3>
            <button
                        className=""
                        onClick={[Function]}
            />
</div>,
          <p>
            Population: 
            1,000
</p>,
          <p>
            Terrain: 
            mountains
</p>,
          <p>
            Climate: 
            arrid
</p>,
          <p>
            Residents: 
            Tom, Dick, Harry
</p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                tatooine
</h3>,
              <button
                className=""
                onClick={[Function]}
/>,
            ],
            "className": "info-card__top-line",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "tatooine",
              },
              "ref": null,
              "rendered": "tatooine",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Population: ",
              "1,000",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Population: ",
            "1,000",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Terrain: ",
              "mountains",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Terrain: ",
            "mountains",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Climate: ",
              "arrid",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Climate: ",
            "arrid",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Residents: ",
              "Tom, Dick, Harry",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Residents: ",
            "Tom, Dick, Harry",
          ],
          "type": "p",
        },
      ],
      "type": "div",
    },
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <div
                    className="info-card__top-line"
          >
                    <h3>
                              tatooine
                    </h3>
                    <button
                              className=""
                              onClick={[Function]}
                    />
          </div>
          <p>
                    Population: 
                    1,000
          </p>
          <p>
                    Terrain: 
                    mountains
          </p>
          <p>
                    Climate: 
                    arrid
          </p>
          <p>
                    Residents: 
                    Tom, Dick, Harry
          </p>
</div>,
        "className": "info-card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="info-card__top-line"
>
              <h3>
                            tatooine
              </h3>
              <button
                            className=""
                            onClick={[Function]}
              />
</div>,
            <p>
              Population: 
              1,000
</p>,
            <p>
              Terrain: 
              mountains
</p>,
            <p>
              Climate: 
              arrid
</p>,
            <p>
              Residents: 
              Tom, Dick, Harry
</p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3>
                  tatooine
</h3>,
                <button
                  className=""
                  onClick={[Function]}
/>,
              ],
              "className": "info-card__top-line",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "tatooine",
                },
                "ref": null,
                "rendered": "tatooine",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "button",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Population: ",
                "1,000",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Population: ",
              "1,000",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Terrain: ",
                "mountains",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Terrain: ",
              "mountains",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Climate: ",
                "arrid",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Climate: ",
              "arrid",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Residents: ",
                "Tom, Dick, Harry",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Residents: ",
              "Tom, Dick, Harry",
            ],
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`PlanetCard should render "n/a" for planets w/ no residents 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PlanetCard
    card={
        Object {
            "climate": "arrid",
            "name": "tatooine",
            "population": "1000",
            "residents": Array [],
            "terrain": "mountains",
          }
    }
    favorites={
        Array [
            Object {
              "name": "tatooine",
            },
          ]
    }
    handleFavoriteClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <div
                className="info-card__top-line"
        >
                <h3>
                        tatooine
                </h3>
                <button
                        className="selected"
                        onClick={[Function]}
                />
        </div>
        <p>
                Population: 
                1,000
        </p>
        <p>
                Terrain: 
                mountains
        </p>
        <p>
                Climate: 
                arrid
        </p>
        <p>
                Residents: 
                n/a
        </p>
</div>,
      "className": "info-card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="info-card__top-line"
>
            <h3>
                        tatooine
            </h3>
            <button
                        className="selected"
                        onClick={[Function]}
            />
</div>,
          <p>
            Population: 
            1,000
</p>,
          <p>
            Terrain: 
            mountains
</p>,
          <p>
            Climate: 
            arrid
</p>,
          <p>
            Residents: 
            n/a
</p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                tatooine
</h3>,
              <button
                className="selected"
                onClick={[Function]}
/>,
            ],
            "className": "info-card__top-line",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "tatooine",
              },
              "ref": null,
              "rendered": "tatooine",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "selected",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Population: ",
              "1,000",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Population: ",
            "1,000",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Terrain: ",
              "mountains",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Terrain: ",
            "mountains",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Climate: ",
              "arrid",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Climate: ",
            "arrid",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Residents: ",
              "n/a",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Residents: ",
            "n/a",
          ],
          "type": "p",
        },
      ],
      "type": "div",
    },
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <div
                    className="info-card__top-line"
          >
                    <h3>
                              tatooine
                    </h3>
                    <button
                              className="selected"
                              onClick={[Function]}
                    />
          </div>
          <p>
                    Population: 
                    1,000
          </p>
          <p>
                    Terrain: 
                    mountains
          </p>
          <p>
                    Climate: 
                    arrid
          </p>
          <p>
                    Residents: 
                    n/a
          </p>
</div>,
        "className": "info-card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="info-card__top-line"
>
              <h3>
                            tatooine
              </h3>
              <button
                            className="selected"
                            onClick={[Function]}
              />
</div>,
            <p>
              Population: 
              1,000
</p>,
            <p>
              Terrain: 
              mountains
</p>,
            <p>
              Climate: 
              arrid
</p>,
            <p>
              Residents: 
              n/a
</p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3>
                  tatooine
</h3>,
                <button
                  className="selected"
                  onClick={[Function]}
/>,
              ],
              "className": "info-card__top-line",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "tatooine",
                },
                "ref": null,
                "rendered": "tatooine",
                "type": "h3",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "selected",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "button",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Population: ",
                "1,000",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Population: ",
              "1,000",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Terrain: ",
                "mountains",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Terrain: ",
              "mountains",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Climate: ",
                "arrid",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Climate: ",
              "arrid",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Residents: ",
                "n/a",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Residents: ",
              "n/a",
            ],
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
